--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@testing-library/user-event": "^12.0.11",
     "babel-jest": "^26.1.0",
     "jest": "^26.1.0",
-    "jest-html-reporter": "^3.1.3"
+    "jest-html-reporter": "^3.1.3",
+    "msw": "^0.36.3",
+    "whatwg-fetch": "^3.6.2"
   }
 }
