--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "test": "jest --coverage --noStackTrace --silent"
+    "test": "jest --coverage --noStackTrace --silent",
+    "nightTest": "node_modules/.bin/nightwatch"
   },
   "jest": {
     "verbose": false,
@@ -16,7 +17,6 @@
       "!**/lcov-report/**"
     ]
   },
-  "type": "module",
   "dependencies": {
     "express": "^4.17.1",
     "global": "^4.4.0",
@@ -32,6 +32,9 @@
     "jest": "^26.1.0",
     "jest-html-reporter": "^3.1.3",
     "msw": "^0.36.3",
-    "whatwg-fetch": "^3.6.2"
+    "whatwg-fetch": "^3.6.2",
+    "chromedriver": "^97.0.0",
+    "geckodriver": "^2.0.0",
+    "nightwatch": "^1.7.6"
   }
 }
